--- a/2020Fall/Compiler/Notes.tex
+++ b/2020Fall/Compiler/Notes.tex
@@ -19,6 +19,8 @@
 \titleformat{\section}{\Large\bfseries}{第~\thesection~节}{1em}{}
 \usepackage{lipsum} %填充文本
 
+\newcommand{\myCoral}{\color[HTML]{FF7F50}} %设置为珊瑚色
+
 \usepackage{ulem} %解决下划线、删除线之类的
 \usepackage{listings}
 \lstset{
@@ -266,9 +268,9 @@ emph = {[2]const, typedef},emphstyle = {[2]\color{red}} }
 		\subsection{左递归}
 		一个文法是左递归的，如果他有非终结符A，对于某个串$\alpha$，存在推导$A\Rightarrow^+A\alpha$。自上而下的分析方法不能用于左递归文法。
 	\section{自顶向下分析方法}
-		\subsection{递归下降分析方法}
+		\subsection{递归下降分析方法}\label{subsection:Recursive_Descent}
 		包括一个输入缓冲区和向前看指针lookahead，自左向右扫描输入串；设计一个辅助过程match()，将lookahead指向的位置与产生式迭代生成的终结符进行匹配，如匹配，将lookahead挪到下一个位置。就是对于一个可能的串，从root开始构建一棵语法的生成树。递归下降也有着自己的一些问题，比如可能进入无限循环。下面是递归下降的三个问题，
-		\subsection{消除左递归}
+		\subsection{消除左递归}\label{subsection:Eliminating_Left_Recursion}
 		左递归分为直接左递归和间接左递归。直接左递归有形如$A\rightarrow A\alpha$的产生式，间接左递归是通过有限次迭代（类似于证明序列）得到（非直接左递归首先变成直接左递归，然后消除他）。消除左递归的通用方法如下所示：首先将A的产生式组合在一起：
 		\[A\to A\alpha_1\mid A\alpha_2\mid\cdots\mid A\alpha_m\mid\beta_1\mid\beta_2\mid\cdots\mid\beta_n\]
 		其中$\beta_i$都不以A开始，$\alpha_i$非空，然后用
@@ -335,14 +337,14 @@ emph = {[2]const, typedef},emphstyle = {[2]\color{red}} }
 		\end{gathered}\]
 		又由于$\beta\Rightarrow^*\varepsilon$所以当遇到$Aa$时，既可以用$A\to\alpha$来展开，也可以用$A\to\beta,\beta\Rightarrow^*\varepsilon$来消去A。\par
 		LL(1)文法有一些明显的性质，如没有公共左因子（提取左因子）、不是二义的（规则重写）、不含左递归（化为直接左递归，拆分）
-		\section{递归下降的预测分析}
-		所谓预测分析是指能根据当前的输入符号为非终结符确定采用哪一个选择（预读取k个token）。在这一个部分，主要是要求写出一个预测分析的程序伪代码。伪代码主要是包括两个部分，即$match$函数和对于每一个非终结符的函数。以如下的文法为例：
-		\[\begin{gathered}
-			type\to simple\mid\uparrow\mathbf{id}\mid\mathbf{array}\ [simple]\ \mathbf{of}\ type\\
-			simple\to\mathbf{integer}\mid\mathbf{char}\mid\mathbf{num\ dotdot\ num}
-		\end{gathered}\]
-		其递归下降预测分析器（伪代码）为（部分）：
-		\begin{lstlisting}
+	\section{递归下降的预测分析}\label{section:Recursive_Descent_Function}
+	所谓预测分析是指能根据当前的输入符号为非终结符确定采用哪一个选择（预读取k个token）。在这一个部分，主要是要求写出一个预测分析的程序伪代码。伪代码主要是包括两个部分，即$match$函数和对于每一个非终结符的函数。以如下的文法为例：
+	\[\begin{gathered}
+		type\to simple\mid\uparrow\mathbf{id}\mid\mathbf{array}\ [simple]\ \mathbf{of}\ type\\
+		simple\to\mathbf{integer}\mid\mathbf{char}\mid\mathbf{num\ dotdot\ num}
+	\end{gathered}\]
+	其递归下降预测分析器（伪代码）为（部分）：
+	\begin{lstlisting}
 void match(terminal t)
 {
 	if (lookahead == t) lookahead = nextToken();
@@ -365,8 +367,8 @@ void type()
 	}
 	else error();
 }
-		\end{lstlisting}
-		具体来说，就是每一个非终结符$T$，需要构造过程$void T()$，在其中对$T$的产生式右端$\alpha$进行匹配。在匹配的判断中使用$FIRST$集合。匹配之后执行的动作为：非终结符调用他自己的过程，终结符$a$调用$match(a)$
+	\end{lstlisting}
+	具体来说，就是每一个非终结符$T$，需要构造过程$void T()$，在其中对$T$的产生式右端$\alpha$进行匹配。在匹配的判断中使用$FIRST$集合。匹配之后执行的动作为：非终结符调用他自己的过程，终结符$a$调用$match(a)$
 		\subsection{预测分析表}
 		对文法的每一个产生式$A\to\alpha$，执行以下两个步骤：
 		\begin{enumerate}
@@ -546,13 +548,64 @@ void type()
 			\item 对依赖图进行拓扑排序，得到语义规则对计算次序
 			\item 按这个次序计算属性得到输入串的翻译
 		\end{enumerate}
+		属性计算依赖于拓扑排序，那么在有向图中，什么时候拓扑排序不存在呢：{\color[HTML]{FF7F50}\circled{1}当图中出现环的时候 \circled{2}SDD的属性之间存在循环依赖关系}（有互锁？）\par
+		解决方案：使用某些特定类型的 依赖图不存在环的SDD：S属性的SDD和L属性的SDD\par
+		一个没有副作用的SDD称为属性文法
+		\begin{enumerate}
+			\item 属性文法增加了语义规则描述的复杂度
+			\item 如:符号表必须作为属性传递
+			\item 为了简单起见，我们可以把符号表作为全局变量， 通过副作用函数读取或者添加标识符
+		\end{enumerate}
+		\subsection{具有受控副作用的语义规则}
+		在实践中，翻译过程会出现一些副作用（什么是副作用呢？就是当一个操作/函数除了产生其计算结果外，还对其他部分产生了影响：一个桌上计算器可能打印出一个结果；一个代码生成器可能把一个标识符的类型加入到符号表中）。对于SDD，我们在属性文法和翻译方案之间找到一个平衡点。（why？）属性文法\footnote{一个没有副作用的SDD有时也称为属性文法（attribute grammar）。一个属性文法的规则仅仅痛哟其他属性值和常量值来定义一个属性值。（龙书P184，line 7）}没有副作用，并支持任何与依赖图一致的求值顺序。翻译方案(\ref{section:Trans_Recipe})要求按从左到右的顺序求值，并允许语义动作包含任何程序片段。\par
+		我们将按照下面的方法之一来控制SDD中的副作用：
+		\begin{enumerate}
+			\item 支持那些不会对属性求值产生约束的附带副作用，换句话说，如果按照依赖图的任何拓扑顺序进行属性求值时都可以产生“正确的”翻译结果，我们就允许副作用存在。这里的“正确”要视具体应用而定。
+			\item 对允许的求值顺序添加约束，使得以任何允许的求值顺序都会产生相同的翻译结果，这些约束可以被看作隐含加入到依赖图中的边
+		\end{enumerate}
+	\section{语法制导的翻译方案}\label{section:Trans_Recipe}
+	语法制导翻译方案（syntax-directed translation scheme，SDT）是语法制导定义（syntax-directed definition，SDD）的一种补充。所有语法制导定义的应用都可以使用语法制导的翻译方案来实现。语法制导的翻译方案是在产生式右部中嵌入了程式片段（称为语义动作，它们可以出现在产生式体的的任何地方）的上下文无关文法（CFG）\par
+	SDT可以看作是SDD的具体实现方案。任何SDT都可以通过下面的方法实现：首先建立一棵语法分析树，然后按照从左到右u的深度优先顺序来执行这些动作（前序遍历）。不过，通常情况下，SDT是在\textbf{语法分析}中实现的，而不会真的构造一棵语法分析树。那么下面就是如何使用SDT来实现两个重要的SDD，i.e：
+	\begin{enumerate}
+		\item 基本文法可以使用LR技术分析，且SDD是S属性的（仅仅用综合属性的SDD称为S属性的SDD）
+		\item 基本文法可以使用LL技术分析，且SDD是L属性的（在一个产生式所关联的各属性之间，依赖图的边可以从左到右，但不能从右到左(因此称为L属性的，L是Left的首字母)）
+	\end{enumerate}
+	语法制导的翻译方案和语法制导定义不同之处是他的语义动作（在此不叫语义规则）放在花括号内，并且可以插入到产生式右部的\textbf{任何地方}，即这种表示法动作与分析交错。若$A\to\alpha\{\cdots\}\beta$，那么花括号中语义动作的执行要在$\alpha$的推导结束之后，在$\beta$的推导开始之前。下面是有关继承属性的几个限制：
+	\begin{enumerate}
+		\item 产生式右部符号的继承属性必须在先于这个符号的动作中计算
+		\item 一个动作不能引用该动作右边符号的综合属性
+		\item 左值的综合属性要放在右部的末端
+		\item 多个继承属性，要考虑次序，避免形成环
+	\end{enumerate}
 	\section{S属性定义的自下而上计算}
 	仅仅使用综合属性的语法制导定义称为S属性的SDD，或S-属性定义、S-SDD。
 		\subsection{语法树}
-		语法树是分析树的浓缩表示。在语法树中，算符（非终结符）和关键字（终结符）不是作为叶结点，而是作为分支结点。语法树上的内部结点都代表运算，其子节点都是他的运算对象。如同在分析树中那样，在语法树中也可以把属性附加到结点。\par
+		抽象语法树（简称语法树）是分析树的浓缩表示。在语法树中，算符（非终结符）和关键字（终结符）不是作为叶结点，而是作为分支结点。语法树上的内部结点都代表运算，其子节点都是他的运算对象。如同在分析树中那样，在语法树中也可以把属性附加到结点。\par
 		语法树的结点可以用有若干指针域的记录来实现。对于算符结点，一个域放运算符，作为结点对象的标记，其余两个域存放只想运算对象的指针。对于基本运算对象结点，一个放\textbf{运算对象类型}，一个放他的值。在真正用于翻译时，语法树的结点可能还有其他域来保存其他属性值，或者属性值的指针（比如说，对于产生式$S\to\mathbf{if}\ B\ \mathbf{then}\ S_1\ \mathbf{else}\ S_2$，运算符\textbf{if-then-else}就有4个域（自己和三个运算对象）
-		\subsection{S属性的自下而上计算}
-		S属性定义的翻译器可以借助LR分析器的生成器来实现，LR可以把文法符号的综合属性放入栈内。\par
+		\subsection{S属性的SDD}
+		每个属性都是综合属性。在依赖图中，总是通过子结点的属性值来计算父结点的属性值。\par
+		语法制导定义SDD是对CFG的推广 \circled{1} 将每个文法符号和一个语义属性集合相关联 \circled{2} 将每个产生式和一组语义规则相关联，用来计算该产生式中各文法符号的属性值
+		\subsubsection{将一个S属性的SDD转换为SDT}
+		将每个语义动作都放在产生式的最后，并且在按照这个产生式体归约为产生式头的时候执行这个动作。所有动作都在产生式最右端的SDT称为“后缀翻译方案”。可以通过 \circled{1} 基于分析树的语法制导翻译方案 \circled{2} 语法分析栈 来实现。
+		\begin{figure}[h]
+			\centering
+			\begin{minipage}{40em}
+				\centering
+				\includegraphics[scale = 0.4]{images/S_SDT_Implementation.pdf}
+				\caption{基于分析树的语法制导翻译方案}
+			\end{minipage}
+		\end{figure}
+		\subsection{后缀SDT的语法分析栈实现}
+		后缀SDT可以在LR语法分析的过程中实现，当归约发生时执行相应的语义动作。各个文法符号的属性值可以放到栈中的某个位置。S属性定义的翻译器可以借助LR分析器的生成器来实现，LR可以把文法符号的综合属性放入栈内。\par
+		如果所有属性都是综合属性，并且所有动作都位于产生式的末端，那么我们可以在把产生式体归约成产生式头的时候计算各个属性的值（why？这个时候产生式体中的所有符号都已经位于符号表中了——想一想综合属性的定义）。如果我们使用$A\to XYZ$这样的产生式进行归约，那么此时X、Y和Z的所有属性都是可用的，并且都位于已知的位置上（栈顶）。在这个动作之后，A和他的属性都位于栈的顶端，即现在存放X的记录的位置上。\par
+		这又引出了另一种语义动作的表示方法，即用栈中相对于栈顶的位置来表示各个属性。如下面的SDT语句：
+		\[A\to XYZ\{A.val=f(X.val,Y.val,Z.val)\}\]
+		在$state$和$val$栈上可以转变为如下操作：
+		\[\begin{cases}
+			state[top-2]=A\\
+			val[top-2]=f(val[top],val[top-1],val[top-2])\\
+			top=top-2
+		\end{cases}\]
 		扩展LR的语法分析栈：
 		\begin{enumerate}
 			\item 在分析栈中使用一个附加的域来存放综合属性值。若支持多个属性，那么可以在栈中存放指针
@@ -560,18 +613,120 @@ void type()
 			\item 语义动作将修改为对栈中文法符号属性的计算
 		\end{enumerate}\par
 		栈操作代码：分为对照的两部分，产生式和代码段。和之前的代码段（对综合属性的赋值及运算）不同，这里由于将正在被分析的结点（们）的属性都入栈了（还维护了一个top指针），现在将这些属性用他们在栈中的位置来表达。注意在这个自底向上的分析中，每一行栈的排布是：产生式“右值”从右向左依次从栈顶向下排，在执行这一步的归约之后pop出去所有的右值，并将左值入栈。\par
-		总的来说，采用自底向上分析，例如LR分析，首先给出 S-属性定义，然后，把S-属性定义变成可执行的代码段，放到产生式尾部，这就构成了翻译程序。（注：看一下紫书P118-119的表4.5，前三栏分别为状态栈、文法符号栈、综合属性栈）。
+		总的来说，采用自底向上分析，例如LR分析，首先给出 S-属性定义，然后，把S-属性定义变成可执行的代码段，放到产生式尾部，这就构成了翻译程序。（注：看一下紫书P118-119的表4.5，前三栏分别为状态栈、文法符号栈、综合属性栈）。随着语法分析的进行，归约前调用相应的语 义子程序，完成翻译的任务。
 	\section{L属性定义的自上而下计算}
-	显然，S属性定义属于L属性定义。
-		\subsection{翻译方案}
-		语法制导的翻译方案和语法制导定义不同之处是他的语义动作（在此不叫语义规则）放在花括号内，并且可以插入到产生式右部的\textbf{任何地方}，即这种表示法动作与分析交错。若$A\to\alpha\{\cdots\}\beta$，那么花括号中语义动作的执行要在$\alpha$的推导结束之后，在$\beta$的推导开始之前。下面是有关继承属性的几个限制：
+	\textit{显然，S属性定义属于L属性定义。}\par
+	边分析边翻译的方式能否用于继承属性?
+	\begin{itemize}
+		\item 属性的计算次序一定受分析方法所限定的分析树 结点建立次序的限制
+		\item 分析树的结点是自左向右生成
+		\item 如果属性信息是自左向右流动，那么就有可能在分析的同时完成属性计算
+	\end{itemize}\par
+	可以在语法分析过程中实现的SDT包括后缀SDT和后面的一种“实现了L属性定义的”SDT。不是所有的SDT都可以在语法分析过程中实现（详见龙书P197的例子）
+		\subsection{产生式内部带有语义动作的SDT}
+		动作可以放置在产生式体中的任何位置上。当一个动作左边当所有符号都被处理过后，该动作立刻执行。因此，如果我们有一个产生式$B\to X\{a\}Y$，那么当我们识别到X（如果X是终结符）或者所有从X推导出当终结符号之后，动作a就会立即执行。更准确地讲，
+		\begin{itemize}
+			\item 如果语法分析过程是\textbf{自底向上}的，那么我们在X的此次出现位于语法分析栈的栈顶时，立刻执行动作a。\textit{从栈操作的过程上来看，这时恰好刚刚执行完{\myCoral 产生式头}为X的产生式的归约，故此时根据本节的定义，执行动作a的条件已经完备}
+			\item 如果语法分析过程是自顶向下的，那么我们在试图展开Y的本次出现（如果Y是非终结符）或者在输入（输入符号表）中检测Y（如果Y是终结符）之前执行语义动作a。\textit{试想为何会将动作a放在这个位置？其实联想继承属性的求值方法不难看出，只有执行了这里的动作（如计算一个X的继承属性）才能在拆分Y的时候获得所有需要的值。想一下语法树和M点。}
+		\end{itemize}
+		\subsection{从SDT中消除左递归}
+		前面语法分析的时候（\ref{subsection:Eliminating_Left_Recursion} 节）有对消除左递归的描述。当文法是SDT的一部分时，我们还需要考虑如何处理其中的动作。\par
+			\paragraph{情况1：语句无赋值影响}
+			先考虑简单的情况，即\textit{只需要关心一个SDT中的动作的执行顺序}的情况（如每个动作只打印一个字符串）。在这种情况下，可以应用下面这个原则完成这个转化：
+			\begin{itemize}
+				\item 当转换文法时，将动作当成终结符号处理
+			\end{itemize}\par
+			这个原则基于下面的思想：文法转换保持了由文法生成的符号串中终结符号的顺序（因为打印只有副作用而对各个符号对赋值没有任何影响）。因此，这些动作在任何从左到右对语法分析中都按照相同的顺序执行，不管这个分析是自顶向下还是自底向上的。
+			\paragraph{情况2：动作是计算属性的值}
+			好消息：如果这个SDD是是属性的，那么我们总是可以通过将计算属性值的动作放在新产生式中的适当位置来构造一个SDT（想一下前一个小节‘S属性的自下而上计算’中的处理）。\par
+			下面是一个通用的解决方案，以解决只有单个递归产生式、单个非递归产生式并且该左递归非终结符号只有单个属性的情况（这么描述十分抽象，事实上可以看下面这个例子）。将这个方案推广到多个递归/非递归产生式的情况并不困难，但是写起来非常麻烦。假设这两个（S属性的）产生式是：
+			\[\begin{gathered}
+				A\to A_1Y\{A.a=g(A_1.a,Y.y)\}\\
+				A\to X\{A.a=f(X.x)\}
+			\end{gathered}\]\par
+			基础文法会被改写成：
+			\[\begin{gathered}
+				A\to XR\\
+				R\to YR\mid\varepsilon
+			\end{gathered}\]\par
+			为了完成这个翻译，我们使用如下SDT：（对于R，使用一个继承属性$R.i$来累计从$A.a$的值开始不断应用g所得的结果
+			\[\begin{aligned}
+				&A\to X\{R.i=f(X.x)\}R\{A.a=R.s\}\\
+				&R\to Y\{R_1.i=g(R.i,Y.y)\}R_1\{R.s=R_1.s\}\\
+				&R\to\varepsilon\{R.s=R.i\}
+			\end{aligned}\]
+			注意到这里还有一个综合属性$R.s$。当R不再生成文法符号Y时才开始计算这个属性的值，这个时间点时以产生式$R\to\varepsilon$的使用为标志的
+	\section{L属性定义的SDT}
+	很多翻译应用可以用L属性来解决，{\color[HTML]{FF0000}下面的方法通过遍历语法分析树来完成翻译工作（重要！）}
+	\begin{enumerate}
+		\item \textit{建立语法分析树并注释}。这个方法对任何非循环定义的SDD都有效
+		\item \textit{构造语法分析树，加入动作，并按照前序遍历顺序来执行这些动作。}可以处理任何L属性定义，下面的第一节讨论了如何把一个L属性SDD转变为SDT，还特别讨论了\textbf{如何根据这样的SDD的语义规则把语义动作嵌入到产生式中}
+		\item \textit{使用一个递归下降的语法分析器。}他为每个终结符都建立了一个函数。对应对非终结符A对函数以参数的方式接受A的继承属性，并返回A的综合属性
+		\item \textit{使用一个递归下降的语法分析器，以边扫描边分析的方式生成代码}
+		\item \textit{与LL语法分析器结合，实现一个SDT。}属性的值存放在语法分析栈中，而各个规则从栈中的已知位置获取需要的属性值。
+		\item \textit{与LR语法分析器结合，实现一个SDT}。这个方法会让人觉得惊讶，因为一个L属性SDD的SDT通常有一些动作位于产生式中间，而在一个LR语法分析过程中，我们只有在构造出一个产生式体的全部符号之后才能肯定确实可以使用这个产生式。然而，\textbf{如果基础文法是LL的，总是可以按照自底向上的方式来处理语法分析和翻译过程}
+	\end{enumerate}
+	对于L属性的计算，考虑结合SDT，在语法分析过程中进行翻译
+	\begin{enumerate}
+		\item 自顶向下计算
 		\begin{enumerate}
-			\item 产生式右部符号的继承属性必须在先于这个符号的动作中计算
-			\item 一个动作不能引用该动作右边符号的综合属性
-			\item 左值的综合属性要放在右部的末端
-			\item 多个继承属性，要考虑次序，避免形成环
+			\item 递归下降分析器
+			\item LL分析器
 		\end{enumerate}
-
+		\item 自底向上计算，考虑与LR分析器的结合
+		\begin{enumerate}
+			\item 删除翻译方案中嵌入的动作
+			\item 继承属性在分析栈中的计算
+		\end{enumerate}
+	\end{enumerate}
+		\subsection{将L属性的SDD转换为SDT}\label{subsection:L_SDD_to_SDT}
+		假设基础文法以自顶向下的方法进行语法分析，因为如果不是这样，那么翻译过程常常无法和一个LL或LR语法分析器一起完成。对于任何文法，我们\textbf{只需要将动作附加到一棵语法分析树中}，并在对这棵树进行前序遍历时执行这些动作，便可以实现下面的技术。将一个L属性的SDD转换为一个SDT的规则如下：
+		\begin{enumerate}
+			\item 把计算一个产生式左部符号的综合属性的动作放置在这个产生式右部的最右端
+			\item 将计算某个非终结符号A的继承属性的动作插入到产生式右部中紧靠在A的本次出现之前的位置上（多个继承属性，要考虑次序，防止形成环）
+		\end{enumerate}
+		\subsection{在递归下降语法分析过程中进行翻译}
+		在 \ref{subsection:Recursive_Descent} 节中提到，一个递归下降的语法分析器对每个非终结符号A都有一个函数A（伪代码描述见 \ref{section:Recursive_Descent_Function} 节）。我们可以按照如下方法把这个语法分析器扩展为一个翻译器：
+		\begin{enumerate}
+			\item 为每个非终结符A构造一个函数
+			\begin{enumerate}
+				\item A的每个继承属性对应该函数的一个形参
+				\item 函数的返回值是A的综合属性值
+			\end{enumerate}
+			\item 在函数体中，要进行语法分析并处理属性
+			\begin{enumerate}
+				\item 首先选择适当的A的产生式
+				\item 用局部变量保存产生式中文法符号的属性
+				\item 对产生式体中的终结符号，读入符号并获取其综合属性(由词法分析得到)
+				\item 对产生式体中的非终结符，调用相应函数，记录返回值
+			\end{enumerate}
+		\end{enumerate}
+		\subsection{边扫描边生成代码}
+		\subsection{L属性的SDD和LL语法分析}
+		{\color[HTML]{ff0000}需要重新看录课，正确性未知。在龙书5.5.3，page 208}\par
+		需要对分析栈进行扩充：增加动作记录action、增加属性记录\par
+		假设一个L属性SDD是一个LL文法，并且已经按照前面所述的方法转换为一个SDT，其语义动作被嵌入到各个产生式中。然后，就可以在LL语法分析过程中完成翻译过程，\textbf{其中的语法分析栈需要扩展，以存放语义动作和属性求值所需的某些数据项}。一般来说，这些数据项是属性值的复制\par
+		\textit{这里注意一个细节：SDD叫语法制导定义，SDT叫语法制导翻译\textbf{方案}，而现在我们做的是语法制导翻译这个过程}\par
+		除了那些代表终结符和非终结符的记录之外，语法分析栈中还将保存\textit{动作记录}和\textit{综合记录}，其中动作记录表示即将被执行的动作，而综合记录保存非终结符号的综合属性值。使用下列两个原则来管理栈中的属性：
+		\begin{enumerate}
+			\item 非终结符A的继承属性放在表示这个非终结符号的栈记录中。对这些属性求值的代码通常使用紧靠在A的栈记录之上的动作记录来表示。实际上，从L属性的SDD到SDT的转换方法保证了动作记录将紧靠在A的上面
+			\item 非终结符A的综合属性放在一个单独的综合记录中，他在栈中紧靠在A的记录下面
+		\end{enumerate}
+		\subsection{L属性的SDD的自底向上语法分析}
+		考虑与LR分析器的结合\par
+		我们可以使用自底向上的方法来完成任何可以用自顶向下方式完成的翻译过程。更准确的说，给定一个以LL文法为基础属性的L属性SDD，可以修改这个文法，并在LR语法分析过程中计算之歌新文法之上的SDD。这个“技巧”包括三个部分：
+		\begin{enumerate}
+			\item 以按照 \ref{subsection:L_SDD_to_SDT} 节中的方法构造得到的SDT为起点。这样的SDT在各个非终结符之前放置语义动作来计算他的继承属性，并且在产生式后端放置一个动作来计算综合属性
+			\item 对每个内嵌的语义动作，向这个文法中引入一个\textit{标记非终结符}来替换他。每个这样的位置都有一个不同的标记，并且对于任意一个标记M都有一个产生式$M\to\varepsilon$
+			\item 如果标记非终结符M在某个产生式$A\to\alpha\{a\}\beta$中替换了语义动作a，对a进行修改得到$a'$，并且将a'关联到$M\to\varepsilon$上。这个动作a'
+			\begin{enumerate}
+				\item 将动作a需要的A或者$\alpha$中符号的任何属性作为M的继承属性进行复制
+				\item 按照a中的方法计算各个属性，但是将计算得到的这些属性作为M的综合属性
+			\end{enumerate}
+		\end{enumerate}
+		\paragraph{为什么标记能正确工作？}
+		标记是只能推导出$\varepsilon$的非终结符，每个标记在所有产生式体中只出现一次。下面正式证明如果一个文法是LL的，那么标记非终结符号可以被插入到产生式体中的任何位置，并且结果文法是LR的。\par
+		事实上，如果文法是LL的，那么只需要看输入符号串w的FIRST符号（如果w为空则是FOLLOW符号），就可以确定w是否可以从A开始，经过一个以产生式$A\to\alpha$开头的推导序列得到。因此，如果我们用自底向上的方式对w进行语法分析，那么只要w的开头出现在输入中，就可以确定w的一个前缀必须被归约成为$\alpha$，然后再归约到S。特别是，如果在$\alpha$的任何位置插入标记，相应的LR状态将隐含的表明这个标记必定存在，并将在输入的正确位置上把$\varepsilon$归约为标记
 
 	\chapter{中间代码生成}
 	中间表示设计的选择随编译器不同而不同。中间表示可以是一种实际的语言，也可以是编译各阶段共享的内部数据结构。C是一种编程语言，但它经常被当作一种中间形式，这是因为它灵活，能生成高效的机器代码，并且他的编译器到处可用。
