update compiler and network

--- a/2020Fall/Compiler/Notes.tex
+++ b/2020Fall/Compiler/Notes.tex
@@ -732,6 +732,7 @@ void type()
 	中间表示设计的选择随编译器不同而不同。中间表示可以是一种实际的语言，也可以是编译各阶段共享的内部数据结构。C是一种编程语言，但它经常被当作一种中间形式，这是因为它灵活，能生成高效的机器代码，并且他的编译器到处可用。
 	\section{中间语言}
 		\paragraph{后缀表示}
+		波兰式、逆波兰式……
 		\paragraph{图形表示（有向无环图，即DAG）}
 		\paragraph{三地址代码}
 		三地址代码是语法树或者DAG的一种线性表示，其中新增加的临时名字对应图的内部结点
